@@ -13,40 +13,41 @@
  * SPDX-License-Identifier: Apache-2.0
  *
  */
-package org.hyperledger.besu.ethereum.bonsai;
+package org.hyperledger.besu.ethereum.bonsai.trielog;
 
 import org.hyperledger.besu.datatypes.Hash;
-import org.hyperledger.besu.ethereum.bonsai.BonsaiWorldStateKeyValueStorage.BonsaiUpdater;
+import org.hyperledger.besu.ethereum.bonsai.cache.CachedBonsaiWorldView;
+import org.hyperledger.besu.ethereum.bonsai.storage.BonsaiWorldStateKeyValueStorage;
+import org.hyperledger.besu.ethereum.bonsai.storage.BonsaiWorldStateKeyValueStorage.BonsaiUpdater;
+import org.hyperledger.besu.ethereum.bonsai.worldview.BonsaiWorldState;
+import org.hyperledger.besu.ethereum.bonsai.worldview.BonsaiWorldStateUpdateAccumulator;
 import org.hyperledger.besu.ethereum.chain.Blockchain;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
-import org.hyperledger.besu.ethereum.core.MutableWorldState;
 import org.hyperledger.besu.ethereum.rlp.BytesValueRLPOutput;
 
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import com.google.common.annotations.VisibleForTesting;
 import org.apache.tuweni.bytes.Bytes32;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public abstract class AbstractTrieLogManager<T extends MutableWorldState>
-    implements TrieLogManager {
+public abstract class AbstractTrieLogManager implements TrieLogManager {
   private static final Logger LOG = LoggerFactory.getLogger(AbstractTrieLogManager.class);
   public static final long RETAINED_LAYERS = 512; // at least 256 + typical rollbacks
 
   protected final Blockchain blockchain;
   protected final BonsaiWorldStateKeyValueStorage rootWorldStateStorage;
 
-  protected final Map<Bytes32, CachedWorldState<T>> cachedWorldStatesByHash;
+  protected final Map<Bytes32, CachedBonsaiWorldView> cachedWorldStatesByHash;
   protected final long maxLayersToLoad;
 
-  AbstractTrieLogManager(
+  protected AbstractTrieLogManager(
       final Blockchain blockchain,
       final BonsaiWorldStateKeyValueStorage worldStateStorage,
       final long maxLayersToLoad,
-      final Map<Bytes32, CachedWorldState<T>> cachedWorldStatesByHash) {
+      final Map<Bytes32, CachedBonsaiWorldView> cachedWorldStatesByHash) {
     this.blockchain = blockchain;
     this.rootWorldStateStorage = worldStateStorage;
     this.cachedWorldStatesByHash = cachedWorldStatesByHash;
@@ -55,11 +56,10 @@ public abstract class AbstractTrieLogManager<T extends MutableWorldState>
 
   @Override
   public synchronized void saveTrieLog(
-      final BonsaiWorldStateArchive worldStateArchive,
-      final BonsaiWorldStateUpdater localUpdater,
+      final BonsaiWorldStateUpdateAccumulator localUpdater,
       final Hash forWorldStateRootHash,
       final BlockHeader forBlockHeader,
-      final BonsaiPersistedWorldState forWorldState) {
+      final BonsaiWorldState forWorldState) {
     // do not overwrite a trielog layer that already exists in the database.
     // if it's only in memory we need to save it
     // for example, in case of reorg we don't replace a trielog layer
@@ -67,13 +67,7 @@ public abstract class AbstractTrieLogManager<T extends MutableWorldState>
       final BonsaiUpdater stateUpdater = forWorldState.getWorldStateStorage().updater();
       boolean success = false;
       try {
-        final TrieLogLayer trieLog =
-            prepareTrieLog(
-                forBlockHeader,
-                forWorldStateRootHash,
-                localUpdater,
-                worldStateArchive,
-                forWorldState);
+        final TrieLogLayer trieLog = prepareTrieLog(forBlockHeader, localUpdater);
         persistTrieLog(forBlockHeader, forWorldStateRootHash, trieLog, stateUpdater);
         success = true;
       } finally {
@@ -86,52 +80,28 @@ public abstract class AbstractTrieLogManager<T extends MutableWorldState>
     }
   }
 
-  protected abstract void addCachedLayer(
-      final BlockHeader blockHeader,
-      final Hash worldStateRootHash,
-      final TrieLogLayer trieLog,
-      final BonsaiWorldStateArchive worldStateArchive,
-      final BonsaiPersistedWorldState forWorldState);
-
   @VisibleForTesting
   TrieLogLayer prepareTrieLog(
-      final BlockHeader forBlockHeader,
-      final Hash forWorldStateRootHash,
-      final BonsaiWorldStateUpdater localUpdater,
-      final BonsaiWorldStateArchive worldStateArchive,
-      final BonsaiPersistedWorldState forWorldState) {
+      final BlockHeader blockHeader, final BonsaiWorldStateUpdateAccumulator localUpdater) {
     LOG.atDebug()
         .setMessage("Adding layered world state for {}")
-        .addArgument(forBlockHeader::toLogString)
+        .addArgument(blockHeader::toLogString)
         .log();
-    final TrieLogLayer trieLog = localUpdater.generateTrieLog(forBlockHeader.getBlockHash());
+    final TrieLogLayer trieLog = localUpdater.generateTrieLog(blockHeader.getBlockHash());
     trieLog.freeze();
-    addCachedLayer(
-        forBlockHeader, forWorldStateRootHash, trieLog, worldStateArchive, forWorldState);
-    scrubCachedLayers(forBlockHeader.getNumber());
     return trieLog;
   }
 
-  synchronized void scrubCachedLayers(final long newMaxHeight) {
+  public synchronized void scrubCachedLayers(final long newMaxHeight) {
     if (cachedWorldStatesByHash.size() > RETAINED_LAYERS) {
       final long waterline = newMaxHeight - RETAINED_LAYERS;
       cachedWorldStatesByHash.values().stream()
-          .filter(layer -> layer.getHeight() < waterline)
-          .collect(Collectors.toList())
-          .stream()
+          .filter(layer -> layer.getBlockNumber() < waterline)
+          .toList()
           .forEach(
               layer -> {
-                cachedWorldStatesByHash.remove(layer.getTrieLog().getBlockHash());
-                layer.dispose();
-                Optional.ofNullable(layer.getMutableWorldState())
-                    .ifPresent(
-                        ws -> {
-                          try {
-                            ws.close();
-                          } catch (Exception e) {
-                            LOG.warn("Error closing bonsai worldstate layer", e);
-                          }
-                        });
+                cachedWorldStatesByHash.remove(layer.getBlockHash());
+                layer.close();
               });
     }
   }
@@ -154,12 +124,8 @@ public abstract class AbstractTrieLogManager<T extends MutableWorldState>
   }
 
   @Override
-  public Optional<MutableWorldState> getBonsaiCachedWorldState(final Hash blockHash) {
-    if (cachedWorldStatesByHash.containsKey(blockHash)) {
-      return Optional.ofNullable(cachedWorldStatesByHash.get(blockHash))
-          .map(CachedWorldState::getMutableWorldState);
-    }
-    return Optional.empty();
+  public boolean containWorldStateStorage(final Hash blockHash) {
+    return cachedWorldStatesByHash.containsKey(blockHash);
   }
 
   @Override
@@ -169,10 +135,6 @@ public abstract class AbstractTrieLogManager<T extends MutableWorldState>
 
   @Override
   public Optional<TrieLogLayer> getTrieLogLayer(final Hash blockHash) {
-    if (cachedWorldStatesByHash.containsKey(blockHash)) {
-      return Optional.of(cachedWorldStatesByHash.get(blockHash).getTrieLog());
-    } else {
-      return rootWorldStateStorage.getTrieLog(blockHash).map(TrieLogLayer::fromBytes);
-    }
+    return rootWorldStateStorage.getTrieLog(blockHash).map(TrieLogLayer::fromBytes);
   }
 }
